添加mqtt client测试代码