@@ -8,15 +8,29 @@
 
 年后把小黑升级一下8G内存,SSD整上
 
-#2016-02-14
+# 2016-02-14
 情人节,本来想发到朋友圈里的,想了想作为单身汪还是算了,跑步就专心跑步.
 >爱与被爱,是这个世界上最重要的事情 **<<滚蛋吧,肿瘤君>>**
 >贱贱的人类啊,就是因为被爱才觉得自己与众不同 **<<女王乔安>>**
 
-#2016-02-15
+# 2016-02-15
  * 练习思维,预防秀逗,不为什么
  * 就跟跑步一样,不为愉悦别人,只为讨好自己,体验其中的过程
  * 过去的就过去吧,往事留在风中,往前看
  
  过年回来第一天开工,仔细看看 gate-connector 长连接工程
  
+# 2016-02-24
+ IDEA-15破解网址
+ license server:
+  http://www.iteblog.com/idea/key.php
+  http://us.idea.lanyus.com/
+  http://idea.lanyus.com
+  http://15.idea.lanyus.com/
+  
+  默认idea.vmoptions配置
+  -Xms128m
+  -Xmx750m
+  -XX:MaxPermSize=350m
+  -XX:ReservedCodeCacheSize=240m
+  -XX:+UseCompressedOops
